# Bayesian-Portfolio-Optimizer

./: CMakeLists.txt  README.md  weights.csv
data/: returns.csv
src/: bayesian_niw.h  data_loader.h  main.cpp  portfolio_optimizer.h  qp_solver.h  utils.h
